Add initial validation for publication context uris (#2397)
When users push updates to publicationDate and/or publicationContext,
the dates in the URIs should be synchronized with the publication date.

This PR:
- Adds validation to EntityDescription to ensure that publication
channel URIs in `publicationContext.publisher` and
`publicationContext.series` contains year that matches the
publicationDate year
- Adds a method to extract the relevant URIs from PublicationContext
- Tests combinations of URIs/date

The next PR:
- Will cover the remaining, somewhat strange cases from Artistic and
Media

Notes:
- There are a lot of test updates, which accounts for a lot of the LOC,
but this PR is still too big, so please review the annotated sections
closely